@@ -9,6 +9,7 @@
 /*-stamp
 
 /normal-build/
+/static-build/
 /xzdec-build/
 /tmp/
 
